--- a/MyProject2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MyProject2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -204,8 +204,9 @@ AssetDialog.CurrentViewType=1
 LastLevel=/Game/FirstPerson/Maps/FirstPersonMap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 OpenAssetsAtExit=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter
+OpenAssetsAtExit=/Game/Damage.Damage
 
 [PluginBrowser]
 InstalledPlugins=WMFCodecs
@@ -1347,6 +1348,7 @@ PhysicsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 /Game/LevelPrototyping/Materials/MI_PrototypeGrid_TopDark.MI_PrototypeGrid_TopDark=1
 /Game/LevelPrototyping/Materials/M_PrototypeGrid.M_PrototypeGrid=1
 /Game/LUSH_StylizedEnvironmentSet/_SharedAssets/T_Leaves_01.T_Leaves_01=1
+/Game/Damage.Damage=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1430,8 +1432,8 @@ PerWorldEditorSettings=(("/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap",
 
 [RootWindow]
 ScreenPosition=X=0.000 Y=32.000
-WindowSize=X=1093.714 Y=579.429
-InitiallyMaximized=True
+WindowSize=X=1093.714 Y=582.286
+InitiallyMaximized=False
 
 [Directories2]
 UNR=../../../../../../temp/cgt545_assignment_5_park1187
@@ -2598,7 +2600,7 @@ UdpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Binding
 WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.Crouching,InputSettings.Bindings.ActionMappings.interact
 PostProcessComponent=PostProcessComponent.PostProcessVolume.Color Grading,PostProcessComponent.PostProcessVolume.Color Grading
 K2Node_VariableGet=PostProcessComponent.PostProcessVolume.Color Grading
-BP_FirstPersonCharacter_C=PostProcessComponent.PostProcessVolume.Color Grading
+BP_FirstPersonCharacter_C=
 K2Node_VariableSet=PostProcessComponent.PostProcessVolume.Color Grading,PostProcessComponent.PostProcessVolume.Color Grading
 PostProcessVolume=PostProcessVolume.Color Grading.Color Grading
 BrushComponent=PostProcessComponent.PostProcessVolume.Color Grading,PostProcessVolume.Color Grading.Color Grading
