--- a/MyProject2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MyProject2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -2472,6 +2472,10 @@ HierarchicalLODUtilities.TimeStamp=2023.08.24-22.37.10
 HierarchicalLODUtilities.LastCompileMethod=Unknown
 ExternalImagePicker.TimeStamp=2023.08.24-22.37.08
 ExternalImagePicker.LastCompileMethod=Unknown
+TextureEditor.TimeStamp=2023.08.24-22.37.22
+TextureEditor.LastCompileMethod=Unknown
+MaterialEditor.TimeStamp=2023.08.24-22.37.13
+MaterialEditor.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
