--- a/MyProject2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MyProject2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -204,9 +204,8 @@ AssetDialog.CurrentViewType=1
 LastLevel=/Game/FirstPerson/Maps/FirstPersonMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 OpenAssetsAtExit=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter
-OpenAssetsAtExit=/Game/Damage.Damage
 
 [PluginBrowser]
 InstalledPlugins=WMFCodecs
@@ -1232,6 +1231,22 @@ PainCausingVolume.Replication=True
 PainCausingVolume.Networking=True
 PainCausingVolume.WorldPartition=True
 PainCausingVolume.Actor=True
+WorldPartitionRuntimeSpatialHash.RuntimeSettings=True
+WorldSettings.WorldPartitionSetup=True
+WorldSettings.PrecomputedVisibility=True
+WorldSettings.GameMode=True
+WorldSettings.Lightmass=True
+WorldSettings.World=True
+WorldSettings.Physics=True
+WorldSettings.Broadphase=True
+WorldSettings.Foliage=True
+WorldSettings.Landscape=True
+WorldSettings.Navigation=True
+WorldSettings.VR=True
+WorldSettings.Rendering=True
+WorldSettings.Audio=True
+WorldSettings.Tick=True
+WorldSettings.Networking=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1288,13 +1303,13 @@ TextBlock.Appearance=True
 TextBlock.Accessibility=True
 
 [DetailPropertyExpansion]
-SkeletalMeshComponent=
-SkinnedMeshComponent=
-MeshComponent=
-PrimitiveComponent=
-SceneComponent=
-ActorComponent=
-Object=
+SkeletalMeshComponent="\"Object\" "
+SkinnedMeshComponent="\"Object\" "
+MeshComponent="\"Object\" "
+PrimitiveComponent="\"Object\" "
+SceneComponent="\"Object\" "
+ActorComponent="\"Object\" "
+Object="\"Object\" "
 CharacterMovementComponent=
 PawnMovementComponent=
 NavMovementComponent=
@@ -1324,6 +1339,10 @@ EditableTextBox="\"Object.Layout.Slot.Object.Layout.Layout|Overlay Slot.Padding\
 Damage_C=
 PainCausingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PhysicsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+WorldPartitionRuntimeSpatialHash="\"Object\" "
+WorldPartitionRuntimeHash="\"Object\" "
+CapsuleComponent="\"Object\" "
+ShapeComponent="\"Object\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPerson/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter=0
@@ -2604,7 +2623,7 @@ UdpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Binding
 WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.Crouching,InputSettings.Bindings.ActionMappings.interact
 PostProcessComponent=PostProcessComponent.PostProcessVolume.Color Grading,PostProcessComponent.PostProcessVolume.Color Grading
 K2Node_VariableGet=PostProcessComponent.PostProcessVolume.Color Grading
-BP_FirstPersonCharacter_C=
+BP_FirstPersonCharacter_C=PostProcessComponent.PostProcessVolume.Color Grading,PostProcessVolume.Color Grading.Color Grading
 K2Node_VariableSet=PostProcessComponent.PostProcessVolume.Color Grading,PostProcessComponent.PostProcessVolume.Color Grading
 PostProcessVolume=PostProcessVolume.Color Grading.Color Grading
 BrushComponent=PostProcessComponent.PostProcessVolume.Color Grading,PostProcessVolume.Color Grading.Color Grading
